syntax = "proto3";
package raft;

service Raft {
    rpc RequestVote (RequestVoteArgs) returns (Empty);
    rpc AppendEntries (AppendEntriesArgs) returns (Empty);
    rpc ReplyToRequestVote (RequestVoteReply) returns (Empty);
    rpc ReplyToAppendEntries (AppendEntriesReply) returns (Empty);
    rpc ClientRequest (ClientRequestArgs) returns (ClientRequestReply);
}

message Empty {}

message RequestVoteArgs {
    uint64 term = 1;
    uint64 candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteReply {
    uint64 term = 1;
    bool voteGranted = 2;
    uint64 peer = 3;
}

message AppendEntriesArgs {
    uint64 term = 1;
    uint64 leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated Log entries = 5;
    uint64 leaderCommit = 6;
}

message Log {
    uint64 term = 1;
    string command = 2;
}

message AppendEntriesReply {
    uint64 term = 1;
    bool success = 2;
    uint64 peer = 3;
}

message ClientRequestArgs {
    string command = 1;
}

message ClientRequestReply {
    bool success = 1;
    uint64 leader = 2;
}

